force-app/main/default/objects/Pokemon__c/fields/Pokemon_Id__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Id__c</fullName>
    <externalId>true</externalId>
    <label>Pokemon Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>