force-app/main/default/objects/Pokemon__c/fields/Primary_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Type__c</fullName>
    <label>Primary Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>