force-app/main/default/objects/Pokemon__c/fields/Sprite_URL__c.field-meta.xml
<CustomField>
    <fullName>Sprite_URL__c</fullName>
    <label>Sprite URL</label>
    <type>Url</type>
</CustomField>